--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@grafbase/sdk": "~0.5.0"
+    "@grafbase/sdk": "^0.6.1"
   }
 }
